# tree-sitter-batch

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  node_types.go  package-lock.json  package.json  pyproject.toml  queries.go  queries_test.go  setup.py  tree-sitter.json
.claude/: .gitignore  settings.json
.github/workflows/: go-compat.yml  lint.yml  publish_crates.yml  publish_npm.yml  publish_pypi.yml  test.yml
bindings/c/: tree-sitter-batch.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
examples/: basic.bat  conditional_execution.bat  control_flow.bat  dope.bat  loops.bat  mvn.cmd  pipes_and_redirects.bat  realistic.bat  variables.bat
go-compat/: acceptance.sh
go-compat/smoke/: main.go
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: positions.sh
test/corpus/: at_prefix_paren.txt  bang_percent_in_args.txt  call_edge_cases.txt  command_name_edge.txt  commands.txt  comments.txt  complex_scripts.txt  conditional_execution.txt  delayed_expansion.txt  echo.txt  echo_off_combinations.txt  exit.txt  fd_redirect_variable.txt  for_loops.txt  for_var_modifiers.txt  for_variable_edge.txt  goto.txt  high_fd_redirect.txt  if_else.txt  if_multi_string.txt  if_statements.txt  integer_arguments.txt  labels.txt  line_continuation.txt  nested_variable_refs.txt  pipes_and_redirects.txt  polyglot_markers.txt  set_display.txt  set_name_with_varref.txt  set_prompt_quoted.txt  (+4 more)
(+5 files in other folders)
