[package]
name = "tree-sitter-batch"
description = "A Windows Batch/CMD grammar for tree-sitter"
version = "0.11.1"
authors = ["WharfLab"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "batch", "cmd"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/wharflab/tree-sitter-batch"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
